fixed label styled (overlapping label classes)

--- a/src/marijuana.css
+++ b/src/marijuana.css
@@ -561,7 +561,7 @@ button{
   }
 
 
-  .label {
+  .label2 {
     display: table;
     text-align: left;
     margin-top: 10%;
